@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2003/09/02 11:39:12 abs Exp $
+# $NetBSD: Makefile,v 1.3 2003/09/02 12:19:36 abs Exp $
 
 DISTNAME=	exim-${EXIM_VERSION}
 PKGNAME=	exim-exiscan-${EXIM_VERSION}-${EXISCAN_VERSION}
+PKGREVISION=	1
 CATEGORIES=	mail net
 
 MAINTAINER=	abs@NetBSD.org
